--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
         <link rel="stylesheet" type="text/css" href="/static/css/style.css">
     </head>
     <body>
-        <div id="nav">
-            <a href="/" id="home">Home</a>
-        </div>
-        <div id="sidenav" class="sidenav">
+        <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebutton" onclick="closeNav()">&times;</a>
             <a href="/about/">About</a>
             <a href="/contact/">Contact</a>
@@ -18,7 +15,7 @@
         <span onclick="openNav()">open</span>
 
         <div id="main">
-            
+            <p>MAIN PAGE</p>
         </div>
     </body>
 </html>
