--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <div id="main">
             <p>MAIN PAGE</p>
         </div>
+
+        <script> type="text/javascript" src="{{ url_for('js', filename='tmp.js')}}"</script>
     </body>
 </html>
 
