more more fixes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <p>MAIN PAGE</p>
         </div>
 
-        <script> type="text/javascript" src="{{ url_for('js', filename='tmp.js')}}"</script>
+        <script type="text/javascript" src="{{ url_for('js', filename='tmp.js')}}"></script>
     </body>
 </html>
 
