--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <script src="https://kit.fontawesome.com/b7a0a41a72.js" crossorigin="anonymous"></script>
     
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -33,3 +34,5 @@
     -->
   </body>
 </html>
+
+
